[package]
name = "nervs_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Compiler for the Nervs language with tamper-proof seal system"
readme = "README.md"
repository = "https://github.com/yourusername/nervs_compiler"
license = "MIT"
keywords = ["compiler", "language", "nervs", "blockchain", "seal"]

[dependencies]
# Lexer & parser
logos = "0.13.0"
chumsky = "0.9.2"

# Error handling
thiserror = "1.0.49"

# Cryptographic functionality for seals
sha2 = "0.10.7"
hmac = "0.12.1"

# Command line interface
clap = { version = "4.4.6", features = ["derive"] }

# Optional: Add these if needed for additional functionality
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
default = []
logging = ["dep:log", "dep:env_logger"]
serialization = ["dep:serde", "dep:serde_json"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true